--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio: I wish I could be the sunshine for you.
 
 # twitter summary info
 #description: A blog about technology and stuff related
-description: Kaixin's life
+description: Kaixin's Garden
 
 # if it's an external image, update below for true
 # better with square images
@@ -24,7 +24,7 @@ baseurl: ""
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+analytics-google: 'UA-156627543-1'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
@@ -80,8 +80,8 @@ authors:
 width: normal
 
 # if you don't need pagination, comment the *paginate* configs below
-# paginate: 5
-# paginate_path: "blog/:num/"
+paginate: 10
+paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
 #projects: true
@@ -99,7 +99,7 @@ read-time: true
 show-tags: true
 
 # related posts inside a post?
-related: true
+#related: true
 
 # Display links for next and previous posts for the specified categories
 post-advance-links: [blog]
