--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ authors:
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
-width: normal
+width: large
 
 # if you don't need pagination, comment the *paginate* configs below
 paginate: 10
@@ -87,10 +87,10 @@ paginate_path: "blog/:num/"
 #projects: true
 
 # if you don't need "about" or "blog", comment them out below
-tags: true
 about: true
 blog: true
 #projects: true
+tags: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
