--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ paginate_path: "blog/:num/"
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
-#projects: true
+projects: true
 tags: true
 
 # do you want to show the "read time" of the posts?
