--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Kaixin Yang
-bio: I wish I could be the sunshine for you.
+bio: I wish I could be your sunshine.
 
 # twitter summary info
 #description: A blog about technology and stuff related
