--- a/_config.yml
+++ b/_config.yml
@@ -137,5 +137,9 @@ friends: [
         {
                 title: "Richsoap",
                 href: "http://richsoap.github.io"
+        },
+        {
+                title: "yzhan",
+                href: "http://yzhan.weebly.com"
         }
 ]
