--- a/_config.yml
+++ b/_config.yml
@@ -151,4 +151,5 @@ friends: [
         }
 ]
 
-title: Kaixin
+conference_title: Security-Related Conference Deadlines
+conference_description: Credit to "https://sec-deadlines.github.io/"
