--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -64,7 +64,7 @@
     - "2020-05-08 23:59"
     - "2020-10-02 23:59"
     - "2021-02-08 23:59"
-  comment: Three times a year: Spring, Fall, and Winter.
+  comment: Three times a year (Spring, Fall, and Winter).
   date: June 21-25, 2021
   place: Dubrovnik, Croatia
   tags: [SECURITY, PRIVACY, FORMAL]
