--- a/_config.yml
+++ b/_config.yml
@@ -152,4 +152,4 @@ friends: [
 ]
 
 conference_title: Security-Related Conference Deadlines
-conference_description: Please let me know if there are any conferences to add or update. (Credit to "https://sec-deadlines.github.io/")
+conference_description: Please let me know if there are any conferences to add or update. The conferences are ordered by names. (Credit to "https://sec-deadlines.github.io/")
