--- a/_data/types.yml
+++ b/_data/types.yml
@@ -15,3 +15,9 @@
   tag: ML
 - name: Test
   tag: TEST
+- name: Control
+  tag: CONTROL
+- name: Diagnosis
+  tag: DIAGNOSIS
+- name: Automation
+  tag: AUTOMATION
