--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -107,6 +107,15 @@
   place: Vienna, Austria
   tags: [SECURITY, PRIVACY]
 
+- name: ICCAD
+  description: International Conference on Control, Automation and Diagnosis
+  year: 2021
+  date: July 5-7, 2021
+  link: http://www.iccad-conf.com/
+  deadline: "2021-01-31 23:59"
+  place: Grenoble, France
+  tags: [CONTROL, AUTOMATION, DIAGNOSIS]
+
 - name: MEMOCODE
   description: ACM-IEEE International Conference on Formal Methods and Models for System Design
   year: 2020
