--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ friends: [
         },
         {
                 title: "yzhan",
-                href: "http://yzhan.weebly.com"
+                href: "http://yzhanquanta.weebly.com"
         }
 ]
 
