--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,4 +1,13 @@
 ---
+- name: APCCAS
+  description: IEEE Asia Pacific Conference on Circuits and Systems
+  year: 2020
+  link: https://apccas2020.org/
+  deadline: "2020-09-10 23:59"
+  date: "December 8-11, 2020"
+  place: Virtual
+  tags: [DESIGN]
+
 - name: AsiaCCS
   description: ACM Asia Conference on Computer and Communications Security
   year: 2021
@@ -107,6 +116,25 @@
   place: Vienna, Austria
   tags: [SECURITY, PRIVACY]
 
+- name: GLSVLSI
+  description: Great Lakes Symposium on VLSI
+  year: 2021
+  date: June 22-25, 2021
+  link: https://www.glsvlsi.org/index.html
+  deadline: "2020-01-31 21:00"
+  timezone: Etc/GMT+5
+  place: Virtual
+  tags: [DESIGN, ML, TEST, SECURITY]
+
+- name: HOST
+  description: IEEE International Symposium on Hardware Oriented Security and Trust
+  year: 2021
+  date: December 5-8, 2021
+  link: http://www.hostsymposium.org/call-for-paper.php
+  deadline: "2020-04-01 23:59"
+  place: Washington DC, USA
+  tags: [CPS, SECURITY]
+
 - name: ICCAD
   description: International Conference On Computer Aided Design
   year: 2020
@@ -116,6 +144,16 @@
   timezone: Etc/GMT+7
   place: Virtual
   tags: [DESIGN, CPS, TEST, SECURITY]
+
+- name: ISCAS
+  description: The IEEE International Symposium on Circuits and Systems
+  year: 2021
+  date: May 23-26, 2021
+  link: https://iscas2021.org/index.php
+  deadline: "2020-11-22 23:59"
+  timezone: Etc/GMT+7
+  place: Daegu, South Korea (Hybrid)
+  tags: [CPS, ML]
 
 - name: MEMOCODE
   description: ACM-IEEE International Conference on Formal Methods and Models for System Design
@@ -162,22 +200,33 @@
   place: Vancouver, B.C., Canada
   tags: [SECURITY, PRIVACY, CRYPTO]
 
+- name: VLSID
+  description: INTERNATIONAL CONFERENCE ON VLSI DESIGN
+  year: 2021
+  link: http://embeddedandvlsidesignconference.org/
+  deadline: "2020-09-30 23:59"
+  date: February 20-24, 2021
+  place: Virtual
+  tags: [CPS, DESIGN, SECURITY, TEST, ML]
+
 - name: VLSI-SoC
   description: IFIP/IEEE International Conference on Very Large Scale Integration
-  year: 2020
-  link: https://vlsisoc2020.eng.utah.edu/
-  deadline: "2020-05-11 23:59"
-  date: October 5-19, 2020
+  year: 2021
+  link: https://vlsisoc.github.io/
+  deadline: "2021-04-26 23:59"
+  date: October 5-7, 2021
+  place: Nanyang Technological University Center, Singapore
+  tags: [SECURITY, DESIGN]
+  comment: Conference Theme: Intelligent and Secure Edge Computing
+
+- name: VTS
+  description: IEEE VLSI Test Symposium
+  year: 2021
+  link: https://tttc-vts.org/public_html/new/2021/
+  deadline: "2020-11-29 23:59"
+  date: April 25-28, 2021
   place: Virtual
   tags: [SECURITY, DESIGN]
-
-- name: WiSec
-  description: ACM Conference on Security and Privacy in Wireless and Mobile Networks
-  year: 2020
-  link: https://wisec2020.ins.jku.at/
-  deadline: "2020-03-13 23:59"
-  date: July 8-10, 2020
-  place: Virtual
-  tags: [SECURITY, PRIVACY]
+  
 
 
