--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -217,7 +217,7 @@
   date: October 5-7, 2021
   place: Nanyang Technological University Center, Singapore
   tags: [SECURITY, DESIGN]
-  comment: Conference Theme: Intelligent and Secure Edge Computing
+  comment: Conference Theme - Intelligent and Secure Edge Computing
 
 - name: VTS
   description: IEEE VLSI Test Symposium
