modify navigation and delete unused files

--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ paginate_path: "blog/:num/"
 #about: true
 blog: true
 #projects: true
-#tags-page: true
-#tags: true
+tags-page: true
+tags: true
 research: true
 
 # do you want to show the "read time" of the posts?
