--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # basic configuration
 name: Kaixin Yang
-bio: Second year Ph.D. student in DesCyPhy Lab at USC
+bio: Third Year Ph.D. Student in DesCyPhy Lab at USC
 description: Kaixin's Garden
 url: "https://sceneryinmirror.github.io"
 baseurl: ""
