--- a/_config.yml
+++ b/_config.yml
@@ -140,6 +140,14 @@ friends: [
         {
                 title: "Richsoap",
                 href: "http://richsoap.github.io"
+        },
+        {
+                title: "Yinghua",
+                href: "https://yinghuah.github.io/"
+        },
+        {
+                title: "Yifeng",
+                href: "https://yfxiao16.github.io/"
         }
 ]
 
