--- a/_config.yml
+++ b/_config.yml
@@ -151,6 +151,10 @@ friends: [
         {
                 title: "Yifeng",
                 href: "https://yfxiao16.github.io/"
+        },
+        {
+                title: "Zhiyu",
+                href: "https://zyni2001.github.io/"
         }
 ]
 
