--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,239 +1,254 @@
 ---
 - name: APCCAS
   description: IEEE Asia Pacific Conference on Circuits and Systems
-  year: 2020
-  link: https://apccas2020.org/
-  deadline: "2020-09-10 23:59"
-  date: "December 8-11, 2020"
-  place: Virtual
+  year: 2023
+  date: November 19-22, 2023
+  place: Hyderabad, Inida
+  link: http://www.apccas2023.org/
+  deadline: "2022-06-04 23:59"
   tags: [DESIGN]
 
 - name: AsiaCCS
   description: ACM Asia Conference on Computer and Communications Security
-  year: 2021
-  link: https://asiaccs2021.comp.polyu.edu.hk
+  year: 2023
+  date: July 10 - 14, 2023
+  place: Melbourne, Australia
+  link: https://asiaccs2023.org/
   deadline:
-    - "2020-08-21 23:59"
-    - "2020-12-11 23:59"
-  date: "June 7-11, 2021"
-  place: Hong Kong, China
+    - "2022-09-01 23:59"
+    - "2022-12-15 23:59"
   tags: [SECURITY, PRIVACY]
 
 - name: Asiacrypt
   description: International Conference on the Theory and Application of Cryptology and Information Security
-  year: 2020
-  link: https://asiacrypt.iacr.org/2020
-  deadline: "2020-05-22 05:00"
+  year: 2022
+  date: December 5-9, 2022
+  place: Taipei, Taiwan
+  link: https://asiacrypt.iacr.org/2022
+  deadline: "2022-05-27 11:59"
   timezone: UTC
-  date: December 7-11, 2020
-  place: Virtual
   tags: CRYPTO
+
+- name: ASP-DAC
+  description: Asia and South Pacific Design Automation Conference
+  year: 2023
+  date: January 16-19, 2023
+  place: Tokyo Odaiba Miraikan, Japan
+  link: https://www.aspdac.com/aspdac2023/
+  deadline: "2022-07-24 23:59"
+  tags: [DESIGN, SECURITY, CPS]
 
 - name: CCS
   description: ACM Conference on Computer and Communications Security
-  year: 2021
-  link: https://www.sigsac.org/ccs/CCS2021/
+  year: 2023
+  date: November 26-30, 2022
+  place: Copenhagen, Denmark
+  link: https://www.sigsac.org/ccs/CCS2023/
   deadline:
-    - "2021-01-20 23:59"
-    - "2021-05-06 23:59"
+    - "2023-01-19 23:59"
+    - "2023-05-04 23:59"
   comment: 2 review cycles.
-  date: "November 14-19, 2021"
-  place: Seoul, South Korea
   tags: [SECURITY, PRIVACY, CRYPTO, FORMAL, CPS]
 
 - name: CHES
   description: IACR Transactions on Cryptographic Hardware and Embedded Systems
-  year: 2021
-  link: https://ches.iacr.org/2021/
+  year: 2023
+  date: September 10-14, 2023
+  place: Prague, Czech Republic
+  link: https://ches.iacr.org/2023/
   deadline:
     - "%y-07-15 23:59"
     - "%y-10-15 23:59"
     - "%y-01-15 23:59"
     - "%y-04-15 23:59"
   comment: Rolling deadline every quarter.
-  date: September 12-15, 2021
-  place: Beijing, China
   tags: [SECURITY, CRYPTO]
 
 - name: Crypto
   description: International Cryptology Conference
-  year: 2020
-  link: https://crypto.iacr.org/2020
-  deadline: "2020-02-11 21:00"
-  timezone: UTC
-  date: August 17-21, 0202
-  place: Virtual
+  year: 2023
+  date: August 19-24, 2023
+  place: Santa Barbara, CA, USA
+  link: https://crypto.iacr.org/2023
+  deadline: "2022-02-16 17:59"
+  timezone: EST
   tags: [CRYPTO]
 
 - name: CSF
   description: IEEE Computer Security Foundations Symposium
-  year: 2021
-  link: https://www.ieee-security.org/TC/CSF2021/
-  deadline:
-    - "2020-05-08 23:59"
-    - "2020-10-02 23:59"
-    - "2021-02-08 23:59"
-  comment: Three times a year (Spring, Fall, and Winter).
-  date: June 21-25, 2021
+  year: 2023
+  date: July 10-14, 2023
   place: Dubrovnik, Croatia
+  link: https://www.ieee-security.org/TC/CSF2023/
+  deadline:
+    - "2022-05-13 23:59"
+    - "2022-09-30 23:59"
+    - "2023-02-03 23:59"
   tags: [SECURITY, PRIVACY, FORMAL]
 
 - name: DAC
   description: The Design Automation Conference
-  year: 2021
-  link: https://www.dac.com/
-  deadline: "2020-11-16 17:00"
-  timezone: Etc/GMT+8
-  date: July 11-15, 2021
+  year: 2023
+  date: July 9-13, 2023
   place: San Francisco, USA
+  link: https://www.dac.com/
+  abstractDeadline: "2022-11-14 17:00"
+  deadline: "2022-11-21 17:00"
+  timezone: Etc/GMT+8
   tags: [SECURITY, DESIGN]
 
 - name: DATE
   description: Design, Automation and Test in Europe Conference
-  year: 2021
+  year: 2023
+  date: April 17-19, 2023
+  place: Antwerp, Belgium
   link: https://www.date-conference.com/
-  deadline: "2020-09-21 23:59"
-  date: Feburary 01-05, 2021
-  place: Virtual
+  abstractDeadline: "2022-09-18 23:59"
+  deadline: "2022-09-25 23:59"
   tags: [DESIGN, CPS, SECURITY, FORMAL, TEST]
 
 - name: Eurocrypt
   description: European Cryptology Conference
-  year: 2021
-  link: https://eurocrypt.iacr.org/2021/
-  deadline: "2020-10-08 21:00"
-  timezone: UTC
-  date: May 2-6, 2021
-  place: Zagreb, Croatia
+  year: 2023
+  date: April 23-27, 2023
+  place: Lyon, France
+  link: https://eurocrypt.iacr.org/2023/
+  deadline: "2022-10-06 23:59"
   tags: CRYPTO
 
 - name: Euro S&P
   description: IEEE European Symposium on Security and Privacy
-  year: 2021
-  date: September 7-11, 2021
-  link: https://www.ieee-security.org/TC/EuroSP2021/
-  deadline: "2020-11-05 23:59"
-  place: Vienna, Austria
+  year: 2023
+  deadline: "2022-10-26 23:59"
+  place: Delft
+  date: June 3-7, 2023
+  link: https://www.ieee-security.org/TC/EuroSP2023/
   tags: [SECURITY, PRIVACY]
 
 - name: GLSVLSI
   description: Great Lakes Symposium on VLSI
-  year: 2021
-  date: June 22-25, 2021
-  link: https://www.glsvlsi.org/index.html
-  deadline: "2020-01-31 21:00"
-  timezone: Etc/GMT+5
-  place: Virtual
+  year: 2023
+  date: June 5-7, 2023
+  link: https://www.glsvlsi.org/
+  deadline: "2022-02-27 11:59"
+  timezone: EST
+  place: Knoxville, TN, USA
   tags: [DESIGN, ML, TEST, SECURITY]
 
 - name: HOST
   description: IEEE International Symposium on Hardware Oriented Security and Trust
-  year: 2021
-  date: December 5-8, 2021
-  link: http://www.hostsymposium.org/call-for-paper.php
-  deadline: "2021-05-04 23:59"
-  place: Washington DC, USA
+  year: 2023
+  date: May 1-4, 2023
+  link: http://www.hostsymposium.org/
+  deadline: 
+    - "2022-10-17 23:59"
+    - "2023-01-16 23:59"
+  place: San Jose, California, USA
   tags: [CPS, SECURITY]
 
 - name: ICCAD
   description: International Conference On Computer Aided Design
-  year: 2021
-  date: November 2-5, 2020
+  year: 2023
+  date: October 29-November 2, 2023
   link: https://iccad.com/
-  deadline: "2021-05-28 17:00"
-  timezone: Etc/GMT+7
-  place: Hilton Munich Park, Munich
+  abstractDeadline: "2023-05-15 23:59"
+  deadline: "2023-05-22 23:59"
+  timezone: UTC-12
+  place: San Francisco, CA, USA
   tags: [DESIGN, CPS, TEST, SECURITY]
 
 - name: ISCAS
   description: The IEEE International Symposium on Circuits and Systems
-  year: 2021
-  date: May 23-26, 2021
-  link: https://iscas2021.org/index.php
-  deadline: "2020-11-22 23:59"
-  timezone: Etc/GMT+7
-  place: Daegu, South Korea (Hybrid)
+  year: 2023
+  date: May 21-25, 2023
+  place: Monterey, California, USA
+  link: https://iscas2023.org
+  deadline: "2022-10-24 23:59"
+  timezone: PST
   tags: [CPS, ML]
+
+- name: ISLPED
+  description: ACM/IEEE International Symposium on Low Power Electronics and Design
+  year: 2023
+  date: August 7-8, 2023
+  place: TU Wien, Vienna, Austria
+  link: https://www.islped.org/2023/
+  abstractDeadline: "2023-03-06 23:59"
+  deadline: "2023-03-13 23:59"
+  tags: [DESIGN]
+
+- name: ISQED
+  description: AI/ML & Electronic Design Security, IoT, Quantum Computing
+  year: 2023
+  date: April 5-7, 2023
+  place: San Francisco, CA, USA
+  link: https://www.isqed.org/
+  deadline: "2022-11-29 23:59"
+  timezone: PDT
+  tags: [SECURITY, EDA, TEST, FORMAL, CPS]
 
 - name: ITC
   description: International Test Conference
-  year: 2021
-  date: October 10-15, 2021
+  year: 2023
+  date: October 8-13, 2023
+  place: Disneyland, Anaheim, CA
   link: http://www.itctestweek.org/
-  abstract_deadline: "April 16, 2021"
-  deadline: "April 23, 2021"
-  place: Unknown
+  abstractDeadline: "2023-03-20 23:59"
+  deadline: "2021-04-03 23:59"
   tags: [TEST, DESIGN, SECURITY]
 
 - name: MEMOCODE
   description: ACM-IEEE International Conference on Formal Methods and Models for System Design
-  year: 2020
-  date: December 2-4, 2020
-  link: https://iitjammu.ac.in/conferences/memocode2020/
-  deadline: "2020-07-31 23:59"
-  place: Jaipur, India
+  year: 2023
+  date: September 21-22, 2023
+  place: Hamburg, Germany
+  link: https://memocode2023.github.io/index.html
+  abstractDeadline: "2023-04-28 23:59"
+  deadline: "2023-05-05 23:59"
   tags: [FORMAL, CPS]
 
 - name: S&P
-  year: 2021
-  date: "May 23-27, 2021"
+  year: 2023
+  date: May 22-26, 2023
+  place: Hyatt Regency, San Francisco, CA
   description: IEEE Symposium on Security and Privacy
-  link: https://www.ieee-security.org/TC/SP2021/
+  link: https://www.ieee-security.org/TC/SP2023/
   deadline:
-    - "2020-03-05 23:59"
-    - "2020-06-04 23:59"
-    - "2020-09-03 23:59"
-    - "2020-12-03 23:59"
-  place: Virtual
+    - "2022-04-01 23:59"
+    - "2022-09-19 23:59"
+    - "2022-12-02 23:59"
   tags: [SECURITY, PRIVACY]
 
 - name: TCC
   description: Theory of Cryptography Conference
-  year: 2020
-  link: https://tcc.iacr.org/2020/
-  deadline: "2020-05-26 22:59"
+  year: 2022
+  date: November 7-10, 2022
+  place: Chicago, USA
+  link: https://tcc.iacr.org/2022/
+  deadline: "2022-05-24 21:59"
   timezone: UTC
-  date: November 16-19, 2020
-  place: Virtual
   tags: CRYPTO
-
+ 
 - name: Usenix
   description: Usenix Security Symposium
-  year: 2021
-  link: https://www.usenix.org/conference/usenixsecurity21
+  year: 2023
+  date: August 9-11, 2023
+  place: Anaheim, CA, USA
+  link: https://www.usenix.org/conference/usenixsecurity23
   deadline:
-    - "2020-06-18 23:59"
-    - "2020-10-15 23:59"
-    - "2021-02-04 23:59"
+    - "2022-06-07 23:59"
+    - "2022-10-11 23:59"
+    - "2023-02-07 23:59"
   comment: Rolling deadline every four months.
-  date: "August 11-13, 2021"
-  place: Vancouver, B.C., Canada
   tags: [SECURITY, PRIVACY, CRYPTO]
-
-- name: VLSID
-  description: INTERNATIONAL CONFERENCE ON VLSI DESIGN
-  year: 2021
-  link: http://embeddedandvlsidesignconference.org/
-  deadline: "2020-09-30 23:59"
-  date: February 20-24, 2021
-  place: Virtual
-  tags: [CPS, DESIGN, SECURITY, TEST, ML]
 
 - name: VLSI-SoC
   description: IFIP/IEEE International Conference on Very Large Scale Integration
-  year: 2021
-  link: https://vlsisoc.github.io/
-  deadline: "2021-04-26 23:59"
-  date: October 5-7, 2021
-  place: Nanyang Technological University Center, Singapore
+  year: 2023
+  link: https://sites.google.com/view/vlsi-soc2023/home?authuser=0
+  abstractDeadline: "2023-05-16 23:59"
+  deadline: "2023-05-23 23:59"
+  date: October 16-18, 2023
+  place: Dubai, UAE
   tags: [SECURITY, DESIGN]
   comment: Conference Theme - Intelligent and Secure Edge Computing
-
-- name: VTS
-  description: IEEE VLSI Test Symposium
-  year: 2021
-  link: https://tttc-vts.org/public_html/new/2021/
-  deadline: "2020-11-29 23:59"
-  date: April 25-28, 2021
-  place: Virtual
-  tags: [SECURITY, DESIGN]
