updated homepage, research page, and CV

--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ disqus:
 
 # if you don't have any of social below, comment the line
 #facebook: profile.php?id=100012146822426
-twitter: Kaixin_Yang_LA
+#twitter: Kaixin_Yang_LA
 # google: mygoogle
-instagram: kaixinyang97
+#instagram: kaixinyang97
 # pinterest: mypinterest
 linkedin: kaixin-yang-a27287162
 # youtube: myyoutube
