update the home page, update the sass settings

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # basic configuration
 name: Kaixin Yang
-bio: Ph.D. Student in DesCyPhy Lab at USC 
+bio: Ph.D. Candidate in the DesCyPhy Lab at USC 
 #bio: kaixinya AT usc.edu
 description: Kaixin's Garden
 url: "https://sceneryinmirror.github.io"
